crates/reap-okx-live-adapter/tests/ui/roles_no_raw_authority.stderr
error[E0599]: no method named `credentials` found for reference `&LiveReadiness` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:15:23
   |
15 |     let _ = readiness.credentials();
   |                       ^^^^^^^^^^^ method not found in `&LiveReadiness`

error[E0599]: no method named `signer` found for reference `&RegularReconciliation` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:16:28
   |
16 |     let _ = reconciliation.signer();
   |                            ^^^^^^ method not found in `&RegularReconciliation`

error[E0599]: no method named `wire` found for reference `&RegularExecution` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:17:23
   |
17 |     let _ = execution.wire();
   |                       ^^^^ private field, not a method

error[E0599]: no method named `transport` found for reference `&LiveSafety` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:18:20
   |
18 |     let _ = safety.transport();
   |                    ^^^^^^^^^
   |
help: there is a method `transform` with a similar name
   |
18 -     let _ = safety.transport();
18 +     let _ = safety.transform();
   |

error[E0599]: no method named `get` found for reference `&ForbiddenOrderObserver` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:19:23
   |
19 |     let _ = forbidden.get("/api/v5/account/config");
   |                       ^^^ method not found in `&ForbiddenOrderObserver`

error[E0599]: no method named `post` found for reference `&PrivateStateSessionFactory` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:20:27
   |
20 |     let _ = private_state.post("/api/v5/trade/order", "{}");
   |                           ^^^^ method not found in `&PrivateStateSessionFactory`

error[E0599]: no method named `get` found for reference `&RegularOrderSessionFactory` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:21:28
   |
21 |     let _ = order_sessions.get("/api/v5/account/config");
   |                            ^^^ method not found in `&RegularOrderSessionFactory`

error[E0599]: no method named `post` found for reference `&RegularOrderSessionFactory` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:22:28
   |
22 |     let _ = order_sessions.post("/api/v5/trade/order", "{}");
   |                            ^^^^ method not found in `&RegularOrderSessionFactory`
